deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sigaint-website
  labels:
    app.kubernetes.io/name: sigaint-website
