deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sigaint-website
  labels:
    app.kubernetes.io/name: sigaint-website
    app.kubernetes.io/component: web
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: sigaint-website
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
